# neuron-experiment

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md
ga_output/: generation_0.csv  generation_1.csv  generation_10.csv  generation_11.csv  generation_12.csv  generation_13.csv  generation_14.csv  generation_15.csv  generation_16.csv  generation_17.csv  generation_2.csv  generation_3.csv  generation_4.csv  generation_5.csv  generation_6.csv  generation_7.csv  generation_8.csv  generation_9.csv
results/generation_0/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_1/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_10/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_11/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_12/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_13/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_14/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_15/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_16/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_17/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  individual_9.txt
results/generation_2/: individual_0.txt  individual_1.txt  individual_10.txt  individual_11.txt  individual_12.txt  individual_13.txt  individual_14.txt  individual_15.txt  individual_16.txt  individual_17.txt  individual_18.txt  individual_19.txt  individual_2.txt  individual_3.txt  individual_4.txt  individual_5.txt  individual_6.txt  individual_7.txt  individual_8.txt  (+1 more)
src/app/: CMakeLists.txt  main.cpp  neural_simulation.cpp  neural_simulation.h  neuron_experiment_app.cpp  neuron_experiment_app.h  types.h  visualization.cpp  visualization.h
src/genetic-algorithm/: CMakeLists.txt  genetic_algorithm.cpp  genetic_algorithm.h  main.cpp
src/libs/experimentbase/: CMakeLists.txt  brain_visualization.cpp  brain_visualization.h  constants.h  neural_simulation.cpp  neural_simulation.h
src/libs/neuronlib/: CMakeLists.txt  activation.cpp  activation.h  actuator.cpp  actuator.h  brain.cpp  brain.h  dendrite.cpp  dendrite.h  flow_field.cpp  flow_field.h  geometry.cpp  geometry.h  neuron.cpp  neuron.h  sensor.cpp  sensor.h  spatial.cpp  spatial.h  spatial_operations.cpp  spatial_operations.h
src/libs/neuronlib/gpu/: CMakeLists.txt  generate_kernel_header.py  gpu_converter.cpp  gpu_converter.h  gpu_implementation.cpp  gpu_implementation.cu  gpu_interface.h  gpu_kernel.cl  gpu_kernel.cu
src/neuron-creature-experiment/: CMakeLists.txt  creature.cpp  creature.h  creature_experiment.cpp  creature_experiment.h  world-design.md  world.cpp  world.h  world_types.cpp  world_types.h
tests/: CMakeLists.txt
tests/libs/neuronlib/: CMakeLists.txt  test_flow_field.cpp  test_neuron_population.cpp  test_spatial_operations.cpp
(+144 files in other folders)
